# telegram-data-agent

./: .env.example  .gitignore  .pyrightconfig.json  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: AGENTS.md
.github/workflows/: new-pr-is-valid.yml  unit-tests.yml
scripts/: export_graph_png.py
src/agent/: __main__.py  graph.py  state.py  tools.py
src/agent/nodes/: __init__.py  evaluate.py  plan.py  translate.py  worker.py
src/agent/prompts/: __init__.py  evaluate.py  plan.py  translate.py  worker.py
src/agent/tools/: __init__.py  push_to_dynamodb.py  send_email.py
src/agent/utils/: __init__.py  aws.py  llm.py  sanitizer.py  structured_output.py
tests/unit_tests/: test_aws_utils.py  test_configuration.py  test_dynamodb_helpers.py  test_evaluate_parsing.py  test_graph_routing.py  test_plan_parsing.py  test_sanitizer.py  test_send_email.py  test_state.py  test_structured_output_fallback.py  test_translate_prompt.py  test_worker_actions.py  test_worker_helpers.py  test_worker_routing.py
