[project]
name = "telegram-data-agent"
version = "0.0.1"
description = "Data aggregating Telegram agent"
authors = [
    { name = "Dor Rondel", email = "dor.rondel@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
]


[project.optional-dependencies]
dev = [
    "anyio>=4.7.0",
    "codespell>=2.4.1",
    "langgraph-cli[inmem]>=0.4.7",
    "mypy>=1.13.0",
    "pyright>=1.1.390",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]
[tool.setuptools.package-dir]
"" = "src"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "codespell>=2.4.1",
    "langgraph-cli[inmem]>=0.4.7",
    "mypy>=1.13.0",
    "pyright>=1.1.390",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
